Fix nav list display on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1104,4 +1104,8 @@
   .carouselButton {
     visibility: hidden;
   }
+
+  .navList {
+    display: none;
+  }
 }
